Updated ReleaseDocumentation (markdown)