@@ -10,6 +10,7 @@ JRuby release preparation
     * unpack src dist and compile it
     * Verify windows installers
     * email good env testers (Ben, Terrence)
+* export MAVEN_OPTS=-XX:MaxPermSize=768m
 * mvn versions:set -DnewVersion=1.7.9 -Pall
 * commit and tag
 * cd .. && rm -rf release && git clone jruby release && cd release
